# essential_setup

./: .gitignore  README.md
boost_setup/: README.md
boost_setup/cmake/: CMakeLists.txt  README.md  readme.md
boost_setup/gcc/: README.md  main.cpp
cuda_setup/: README.md  hellocuda.cu
jekyll_setup/: readme.md
latex_setup/: README.md
library_setup/: README.md
linux_setup/: README.md  README_.md  README_old.md
mpi_setup/: README.md
opencl_setup/: README.md
openmp_setup/: README.md
openmp_setup/cmake/: CMakeLists.txt  README.md  main.cpp
openmp_setup/gcc/: README.md  main.cpp
tbb_setup/: README.md
tbb_setup/TBB/: README.md  readme.md
tbb_setup/TBB/cmake/: CMakeLists.txt  README.md  readme.md  testtbb_long.cpp  testtbb_short.cpp
tbb_setup/TBB/gcc/: README.md  readme.md  testtbb_short.cpp
tbb_setup/oneTBB/: README.md  readme.md
tbb_setup/oneTBB/cmake/: CMakeLists.txt  README.md  readme.md  testtbb_long.cpp  testtbb_short.cpp
tbb_setup/oneTBB/gcc/: README.md  readme.md  testtbb_long.cpp  testtbb_short.cpp
