cmake_minimum_required(VERSION 3.22)
project(testtbb)
set(CMAKE_CXX_STANDARD 20)
#list(APPEND CMAKE_MODULE_PATH "/opt/intel/oneapi/tbb/latest/lib/cmake/tbb")
#list(APPEND CMAKE_MODULE_PATH "/opt/intel/oneapi/dpl/latest/lib/cmake/oneDPL")
find_package(TBB REQUIRED)
add_executable(testtbb_long.out testtbb_long.cpp)
add_executable(testtbb_short.out testtbb_short.cpp)
target_link_libraries(testtbb_long.out tbb)
target_link_libraries(testtbb_short.out tbb)
